--- a/src/main/resources/templates/email/email-change-place-status.html
+++ b/src/main/resources/templates/email/email-change-place-status.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Question news</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">
         /**
@@ -102,10 +100,8 @@
 
 </head>
 <body style="background-color: #e9ecef;">
-
 <!-- start body -->
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
-
     <!-- start logo -->
     <tr>
         <td align="center" bgcolor="#e9ecef">
@@ -119,9 +115,7 @@
                     <td align="center" valign="top" bgcolor="#bada55" style="margin-top: 20px">
                         <!--/*@thymesVar id="clientLink" type="java.lang.String"*/-->
                         <a th:href="${clientLink}"
-                           style="display: inline-block; padding: 20px 50px; font-weight:700; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 32px; color: #ffffff; text-decoration: none; border-radius: 6px;">
-                            GreenCity
-                        </a>
+                           style="display: inline-block; padding: 20px 50px; font-weight:700; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 32px; color: #ffffff; text-decoration: none; border-radius: 6px;">GreenCity</a>
                     </td>
                 </tr>
             </table>
@@ -146,10 +140,7 @@
                 <tr>
                     <td align="left" bgcolor="#ffffff"
                         style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
-                        <!--/*@thymesVar id="user" type="greencity.entity.User"*/-->
-                        <!--/*@thymesVar id="getFirstName" type="java.lang.String"*/-->
-                        <!--/*@thymesVar id="getLastName" type="java.lang.String"*/-->
-                        <h1 th:text="${'Dear ' + user.getFirstName() + ' ' + user.getLastName() + ', '}"
+                        <h1 th:text="${'Dear ' + userFirstName + ', '}"
                             style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;"></h1>
                         <h2 th:text="${'Your place was ' + status}"
                             style="margin: 0; font-size: 24px; font-weight: 700; letter-spacing: -1px; line-height: 48px;"></h2>
@@ -172,7 +163,6 @@
                     <td align="center" valign="top" width="600">
             <![endif]-->
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-
                 <!-- start copy -->
                 <tr>
                     <td align="left" bgcolor="#ffffff"
@@ -188,7 +178,6 @@
                         </p>
                     </td>
                 </tr>
-
                 <tr>
                     <td align="left" bgcolor="#ffffff"
                         style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
@@ -240,6 +229,5 @@
 
 </table>
 <!-- end body -->
-
 </body>
 </html>
