--- a/src/main/resources/templates/email/change-place-status-email-page.html
+++ b/src/main/resources/templates/email/change-place-status-email-page.html
@@ -85,9 +85,21 @@
             border-collapse: collapse !important;
         }
 
-        a {
-            color: #bada55;
+        .site-clr {
+            background-color: #bada55;
         }
+
+        .background-clr {
+            background-color: #e9ecef;
+        }
+
+        .background-msg-clr {
+            background-color: #ffffff;
+        }
+
+        /*a {*/
+        /*    color: #bada55;*/
+        /*}*/
 
         img {
             height: auto;
@@ -99,12 +111,12 @@
     </style>
 
 </head>
-<body style="background-color: #e9ecef;">
+<body class="background-clr">
 <!-- start body -->
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <!-- start logo -->
     <tr>
-        <td align="center" bgcolor="#e9ecef">
+        <td class="background-clr" align="center">
             <!--[if (gte mso 9)|(IE)]>
             <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
                 <tr>
@@ -112,7 +124,7 @@
             <![endif]-->
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
-                    <td align="center" valign="top" bgcolor="#bada55" style="margin-top: 20px">
+                    <td class="site-clr" align="center" valign="top" style="margin-top: 20px">
                         <!--/*@thymesVar id="clientLink" type="java.lang.String"*/-->
                         <a th:href="${clientLink}"
                            style="display: inline-block; padding: 20px 50px; font-weight:700; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 32px; color: #ffffff; text-decoration: none; border-radius: 6px;">GreenCity</a>
@@ -130,7 +142,7 @@
 
     <!-- start hero -->
     <tr>
-        <td align="center" bgcolor="#e9ecef">
+        <td class="background-clr" align="center">
             <!--[if (gte mso 9)|(IE)]>
             <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
                 <tr>
@@ -138,7 +150,7 @@
             <![endif]-->
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
-                    <td align="left" bgcolor="#ffffff"
+                    <td class="background-msg-clr" align="left"
                         style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
                         <h1 th:text="${'Dear ' + userFirstName + ', '}"
                             style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;"></h1>
@@ -165,7 +177,7 @@
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <!-- start copy -->
                 <tr>
-                    <td align="left" bgcolor="#ffffff"
+                    <td class="background-msg-clr" align="left"
                         style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
                         <p th:text="${'Your proposed place &quot;' + placeName + '&quot; has been ' + status} + '.'"
                            style="margin: 0;">
@@ -179,7 +191,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td align="left" bgcolor="#ffffff"
+                    <td class="background-msg-clr" align="left"
                         style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
                         <p style="margin: 0;">Sincerely yours, GreenCity's team</p>
                     </td>
@@ -197,7 +209,7 @@
 
 
     <tr>
-        <td align="center" bgcolor="#e9ecef" style="padding: 24px;">
+        <td class="background-clr" align="center" style="padding: 24px;">
             <!--[if (gte mso 9)|(IE)]>
             <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
                 <tr>
@@ -207,7 +219,7 @@
 
                 <!-- start permission -->
                 <tr>
-                    <td align="center" bgcolor="#e9ecef"
+                    <td class="background-clr" align="center"
                         style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
                         <p style="margin: 0;">
                             You received this email because you subscribed for notifications via e-mail.
