add functionality for news sender and email validation

--- a/src/main/resources/templates/email/news-receive-email-page.html
+++ b/src/main/resources/templates/email/news-receive-email-page.html
@@ -205,9 +205,8 @@
             <p style="margin: 0;">
                 You received this email because you subscribed for notifications about news via e-mail.
                 If you didn't request this action you can unsubscribe from next news clicking on this
-                <span th:href="${unsubscribeLink} + ${}" class="gCity-link">LINK</span>
+                <span th:href="${unsubscribeLink}" class="gCity-link">LINK</span>
                 or copy this link (<span style="margin: 0;" th:text="${unsubscribeLink}">
-                <a th:href="${unsubscribeLink}" target="_blank"></a>
                 </span>) on browser.
             </p>
         </td>
