--- a/src/main/resources/templates/email/news-receive-email-page.html
+++ b/src/main/resources/templates/email/news-receive-email-page.html
@@ -157,8 +157,8 @@
                         style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px;">
                         <div>
                             <h3>
-                                <span th:text="${news.creationDate.toLocalDate}" style="font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-                            font-size: 8px;">2019-10-10</span>
+                                <span th:text="${news.creationDate.toLocalDate().toString()}" style="font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+                            font-size: 8px;"></span>
                                 <br>
                                 <span th:text="${news.title}"></span>
                             </h3>
