change color in mail templates

--- a/src/main/resources/templates/email/change-place-status-email-page.html
+++ b/src/main/resources/templates/email/change-place-status-email-page.html
@@ -86,7 +86,7 @@
         }
 
         .site-clr {
-            background-color: #bada55;
+            background-color: #13aa57;
         }
 
         .background-clr {
@@ -98,7 +98,7 @@
         }
 
         /*a {*/
-        /*    color: #bada55;*/
+        /*    color: #13aa57;*/
         /*}*/
 
         img {
