--- a/src/main/resources/templates/email/new-places-report-email-page.html
+++ b/src/main/resources/templates/email/new-places-report-email-page.html
@@ -86,7 +86,7 @@
         }
 
         .site-clr {
-            background-color: #bada55;
+            background-color: #13aa57;
         }
 
         .background-clr {
@@ -99,7 +99,7 @@
 
         .gCity-link {
             text-decoration: none;
-            color: #bada55;
+            color: #13aa57;
             cursor: pointer;
         }
 
