--- a/src/main/resources/templates/email/verify-email-page.html
+++ b/src/main/resources/templates/email/verify-email-page.html
@@ -88,7 +88,7 @@
         }
 
         a {
-            color: #bada55;
+            color: #13aa57;
         }
 
         img {
@@ -117,7 +117,7 @@
             <![endif]-->
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
-                    <td align="center" valign="top" bgcolor="#bada55" style="margin-top: 20px">
+                    <td align="center" valign="top" bgcolor="#13aa57" style="margin-top: 20px">
                         <a th:href="${clientLink}"
                            style="display: inline-block; padding: 20px 50px; font-weight:700; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 32px; color: #ffffff; text-decoration: none; border-radius: 6px;">
                             Green City
@@ -187,7 +187,7 @@
                                 <td align="center" bgcolor="#ffffff" style="padding: 12px;">
                                     <table border="0" cellpadding="0" cellspacing="0">
                                         <tr>
-                                            <td align="center" bgcolor="#bada55" style="border-radius: 6px;">
+                                            <td align="center" bgcolor="#13aa57" style="border-radius: 6px;">
                                                 <a th:href="${verifyAddress}" target="_blank"
                                                    style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">
                                                     Verify Email</a>
