--- a/core/src/main/resources/templates/core/management_users_list.html
+++ b/core/src/main/resources/templates/core/management_users_list.html
@@ -2,29 +2,49 @@
 <!--suppress ALL -->
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8"/>
+    <title>User Habits</title>
+    <link rel="icon" type="image/x-icon" th:href="@{/img/favicon.ico}"/>
+    <link rel="stylesheet" th:href="@{/css/header.css}">
+    <link rel="stylesheet" th:href="@{/css/footer.css}">
+    <link rel="stylesheet" th:href="@{/css/position.css}">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+          integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,700,800&display=swap&subset=cyrillic"
+          rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap" rel="stylesheet"/>
 </head>
 <body>
-    <table border="1">
+<div id="header" th:insert="core/header"></div>
+<div class="main-content">
+    <table class="table">
         <thead>
-            <tr>
-                <th>ID</th>
-                <th>User name</th>
-                <th>Email</th>
-                <th>Credo</th>
-                <th>Status</th>
-            </tr>
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">User name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Credo</th>
+            <th scope="col">Status</th>
+        </tr>
         </thead>
         <tbody>
-            <tr th:each="user : ${users}">
-                <td th:text="${user.id}"></td>
-                <td th:text="${user.name}"></td>
-                <td th:text="${user.email}"></td>
-                <td th:text="${user.userCredo}"></td>
-                <td th:text="${user.userStatus}"></td>
-            </tr>
+        <tr th:each="user : ${users}">
+            <td th:text="${user.id}"></td>
+            <td th:text="${user.name}"></td>
+            <td th:text="${user.email}"></td>
+            <td th:text="${user.userCredo}"></td>
+            <td th:text="${user.userStatus}"></td>
+        </tr>
         </tbody>
     </table>
+    <br><br>
+</div>
+<div id="footer" th:insert="core/footer"></div>
 </body>
 </html>
