created ManagementTipsAndTricksController for displaying Tips&Tricks

--- a/core/src/main/resources/templates/core/footer.html
+++ b/core/src/main/resources/templates/core/footer.html
@@ -13,7 +13,7 @@
                             <a class="router-links" href="#">Eco news</a>
                         </li>
                         <li>
-                            <a href="#" class="router-links">Tips & Tricks</a>
+                            <a href="/management/tipsandtricks" class="router-links">Tips & Tricks</a>
                         </li>
                         <li>
                             <a class="router-links" href="#">Fact of the day</a>
