--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -19,7 +19,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="/management/tipsandtricks">
                                     Tips & Tricks
                                 </a>
                             </li>
