user parameter removed

--- a/core/src/main/resources/templates/core/footer.html
+++ b/core/src/main/resources/templates/core/footer.html
@@ -22,7 +22,7 @@
                             <a class="router-links" href="#">Users</a>
                         </li>
                         <li>
-                            <a href="/management/habits" class="router-links">Habits</a>
+                            <a href="/management/habits/" class="router-links">Habits</a>
                         </li>
                     </ul>
                 </div>
