--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -34,7 +34,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="/management/habits">
+                                <a href="/management/habits/">
                                     Habits
                                 </a>
                             </li>
