Added view with data and pagination.

--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <header th:fragment="header">
     <div class="main-header">
