update functionality for user management

--- a/core/src/main/resources/static/css/main.css
+++ b/core/src/main/resources/static/css/main.css
@@ -13,3 +13,9 @@ table {
 table th, table td {
     padding: 5px;
 }
+
+.error {
+    color: red;
+    text-align: center;
+    margin-top: -26px;
+}
