--- a/core/src/main/resources/templates/core/management_fact_of_the_day.html
+++ b/core/src/main/resources/templates/core/management_fact_of_the_day.html
@@ -291,36 +291,59 @@
                     </div>
                     <table class="table table-striped table-hover">
                         <thead>
-                        <tr>
-                            <th>
-							<span class="custom-checkbox">
-								<input type="checkbox" id="selectAll">
-								<label for="selectAll"></label>
-							</span>
-                            </th>
-                            <th>ID</th>
-                            <th>Name</th>
-                            <th>Creation date</th>
-                            <th>Actions</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr th:each="factOfTheDay, iterStatus :${pageable.getPage()}">
-                            <td>
+                            <tr class="table-primary">
+                                <th>
                                 <span class="custom-checkbox">
-                                    <input type="checkbox" th:id="checkbox+${iterStatus.count}" id="checkbox1" name="options[]" value="1">
-                                    <label th:for="checkbox+${iterStatus.count}" for="checkbox1"></label>
-							    </span>
-                            </td>
-                            <td th:text="${factOfTheDay.getId()}"></td>
-                            <td th:text="${factOfTheDay.getName()}"></td>
-                            <td th:text="${factOfTheDay.getCreateDate()}"></td>
-                            <td>
-                                <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                                <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
-                            </td>
-                        </tr>
+                                    <input type="checkbox" id="selectAll">
+                                    <label for="selectAll"></label>
+                                </span>
+                                </th>
+                                <th>ID</th>
+                                <th>Name</th>
+                                <th>Translations</th>
+                                <th>Creation date</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <th:block th:each="factOfTheDay, iterStatus :${pageable.getPage()}">
+                        <tbody >
+                            <tr>
+                                <td>
+                                    <span class="custom-checkbox">
+                                        <input type="checkbox" th:id="checkbox+${iterStatus.count}" id="checkbox1" name="options[]" value="1">
+                                        <label th:for="checkbox+${iterStatus.count}" for="checkbox1"></label>
+                                    </span>
+                                </td>
+                                <td th:text="${factOfTheDay.getId()}"></td>
+                                <td th:text="${factOfTheDay.getName()}"></td>
+                                <td>
+                                    <table class="table table-borderless m-0">
+                                        <thead>
+                                            <tr class="table-secondary">
+                                                <th class="py-1">TranslationID</th>
+                                                <th class="py-1">Content</th>
+                                                <th class="py-1">LanguageCode</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <th:block th:each="translation : ${pageable.getPage().get(iterStatus.index).getFactOfTheDayTranslations()}">
+                                                <tr>
+                                                    <td class="py-1 text-right" th:text="${translation.getId()}">1</td>
+                                                    <td class="py-1" th:text="${translation.getContent()}"></td>
+                                                    <td class="py-1" th:text="${translation.getLanguage().getCode()}"></td>
+                                                </tr>
+                                            </th:block>
+                                        </tbody>
+                                    </table>
+                                </td>
+                                <td th:text="${#temporals.format(factOfTheDay.getCreateDate(), 'dd/MM/yyyy HH:mm')}"></td>
+                                <td>
+                                    <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                                    <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                                </td>
+                            </tr>
                         </tbody>
+                        </th:block>
                     </table>
                     <div class="clearfix">
                         <div class="hint-text">Showing <b th:text="${pageable.getTotalElements()>20?20:pageable.getTotalElements()}">5</b> out of <b th:text="${pageable.getTotalElements()}">25</b> entries</div>
@@ -337,7 +360,7 @@
         <div id="addFactOfTheDayModal" class="modal fade">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <form>
+                    <form th:action="@{factoftheday/save}" method="post">
                         <div class="modal-header">
                             <h4 class="modal-title">Add Fact of the day</h4>
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
