--- a/core/src/main/resources/templates/core/management_tips_and_tricks.html
+++ b/core/src/main/resources/templates/core/management_tips_and_tricks.html
@@ -146,7 +146,7 @@
                         </div>
                         <div class="form-group">
                             <label>Image</label>
-                            <input type="file" class="form-control" name="file">
+                            <input type="file" class="form-control" name="file" id="creationFile">
                             <span th:id="errorModalSavefile" class="errorSpan"></span>
                         </div>
 
