--- a/core/src/main/resources/templates/core/management_user.html
+++ b/core/src/main/resources/templates/core/management_user.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8"/>
@@ -17,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,700,800&display=swap&subset=cyrillic"
           rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap" rel="stylesheet"/>
+    <script src="https://kit.fontawesome.com/c847fb58e4.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -36,7 +36,7 @@
                             </div>
                             <div class="col-sm-6">
                                 <a href="#addUserModal" id="addFactOfTheDayModalBtn" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New User</span></a>
-                                <a href="#deleteAllSelectedModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>
+                                <a href="#deactivateAllSelectedModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Deactivate</span></a>
                             </div>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                         </tr>
                         </thead>
                         <th:block th:each="user, iterStatus :${users.getPage()}">
-                            <tbody >
+                            <tbody>
                             <tr>
                                 <td>
                                     <span class="custom-checkbox">
@@ -72,8 +72,9 @@
                                 <td th:text="${user.userCredo}"></td>
                                 <td th:text="${user.userStatus}"></td>
                                 <td>
-                                    <a th:href="@{/management/users/findById/(id=${user.id})}" class="edit eBtn" ><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                                    <a th:href="@{/management/users/deactivate/(id=${user.id})}" class="delete eDelBtn" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Deactivate">&#xE872;</i></a>
+                                    <a th:href="@{/management/users/findById/(id=${user.id})}" class="edit eBtn" ><i class="far fa-edit" data-toggle="tooltip" title="Edit"></i></a>
+                                    <a th:href="@{/management/users/deactivate/(id=${user.id})}" class="deactivate-user eDeactBtn" data-toggle="modal"><i class="fas fa-lock" data-toggle="tooltip" title="Deactivate"></i></a>
+                                    <a th:href="@{/management/users/activate/(id=${user.id})}" class="activate-user eActBtn" data-toggle="modal"><i class="fas fa-lock-open" data-toggle="tooltip" title="Activate"></i></a>
                                 </td>
                             </tr>
                             </tbody>
@@ -90,7 +91,7 @@
                 </div>
             </div>
         </div>
-        <!-- Add Modal HTML (for now unavailable) -->
+        <!--todo Add user Modal HTML -->
         <div id="addUserModal" class="modal fade">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -130,7 +131,7 @@
                 </div>
             </div>
         </div>
-        <!-- Edit Modal HTML -->
+        <!-- Edit user Modal HTML -->
         <div id="editUserModal" class="modal fade">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -161,8 +162,8 @@
                                 <span th:id="errorModalUpdateuserCredo" class="errorSpan"></span>
                             </div>
                             <div class="form-group">
-                                <label>Status</label>
-                                <input type="text" class="form-control" id="userStatus" name="userStatus" required>
+                                <label for="userStatus">Status</label>
+                                <input type="text" class="form-control" id="userStatus" name="userStatus" required readonly>
                                 <span th:id="errorModalUpdateuserStatus" class="errorSpan"></span>
                             </div>
                         </div>
@@ -174,7 +175,7 @@
                 </div>
             </div>
         </div>
-        <!-- Delete (deactivate) Modal HTML -->
+        <!-- Deactivate user Modal HTML -->
         <div id="deactivateUserModal" class="modal fade">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -184,8 +185,8 @@
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                         </div>
                         <div class="modal-body">
-                            <p>Are you sure you want to delete this User?</p>
-                            <p class="text-warning"><small>This action cannot be undone.</small></p>
+                            <p>Are you sure you want to deactivate this User?</p>
+                            <p class="text-warning"><small>This user will not be able to login anymore.</small></p>
                         </div>
                         <div class="modal-footer">
                             <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
@@ -195,7 +196,28 @@
                 </div>
             </div>
         </div>
-        <!-- Deactivate all selected Modal HTML -->
+        <!-- Activate user Modal HTML -->
+        <div id="activateUserModal" class="modal fade">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <form id="activateUserForm" >
+                        <div class="modal-header">
+                            <h4 class="modal-title">Deactivate User</h4>
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Are you sure you want to set User's status to <b>ACTIVATED</b>?</p>
+                            <p class="text-warning"><small>This user will be able to login again.</small></p>
+                        </div>
+                        <div class="modal-footer">
+                            <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                            <a href="" id="activateOneSubmit" class="btn btn-danger">Activate</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <!-- Deactivate all selected users Modal HTML -->
         <div id="deactivateAllSelectedModal" class="modal fade">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -210,7 +232,7 @@
                         </div>
                         <div class="modal-footer">
                             <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                            <a href="" id="deactivateAllSubmit" class="btn btn-danger">Deactivate</a>
+                            <a href="" id="deactivateAllSubmit" class="btn btn-danger">Deactivate marked</a>
                         </div>
                     </form>
                 </div>
