--- a/core/src/main/resources/templates/core/management_tips_and_tricks.html
+++ b/core/src/main/resources/templates/core/management_tips_and_tricks.html
@@ -45,6 +45,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="search-container">
+                    <form class="searching" th:action="@{/management/tipsandtricks}" method="get">
+                        <label for="textSearch"></label>
+                        <input id="textSearch" type="text" name="query" placeholder="Search...">
+                        <button><i class="fa fa-search"></i></button>
+                    </form>
+                </div>
                 <table class="table table-striped table-hover">
                     <thead>
                     <tr class="table-primary">
